2001-03-19  Jonathan Gapen  <jagapen@home.com>

	* Source/NSAutoreleasePool.m, Source/NSCharacterSet.m,
	Source/NSHashTable.m, Source/NSMapTable.m, Source/NSZone.m:
	Update from %s/([-cString]) to %@ for format strings.
	* Source/NSDecimal.m: In GSDecimalFromString(), use ([-lossyCString])
	instead of ([-cString]) which should (in the future) always return
	ASCII-range decimal digits in place of digits from other languages.

2001-03-19  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSThread.m: registerCurrentThread and
	unregisterCurrentThread turned into functions - called
	GSRegisterCurrentThread and GSUnregisterCurrentThread.
	* Headers/gnustep/base/NSThread.h: Updated for change.

	* Source/NSThread.m (GSRegisterCurrentThread): Call
	objc_thread_add before creating the NSThread object using a method
	call.  (GSUnregisterCurrentThread): Post the NSThreadWillExit
	notification.
	
2001-03-19  Jonathan Gapen  <jagapen@home.com>

	* Source/NSString.m: In ([-rangeOfComposedCharacterSequenceAtIndex:]),
	use the NSCharacterSet non-base character set to identify non-base
	characters.  In ([-cStringLength]), do not allow lossy string
	conversion.  In ([+localizedNameOfStringEncoding:]), use NSBundle's
	([-gnustepBundle]) rather than looking in root path.

2001-03-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSThread.h: Remove unused ivar.
	* Source/NSThread.m: Revise scheme for deallocation of thread
	dictionary ... keep it operating to avoid problems with stuff
	trying to use it while deing deallocated.  Log memory leaks.
	* Source/NSRunLoop.m: ([+currentRunLoop]) return nil if there is
	no thread dictionary available (shouldn't happen).
	* Source/NSString.m: MINGW path handling fixes by Michael Scheibler
	stringByAppendingPath, isAbsolurtePath, and stringByStandardizingPath.
	
2001-03-16  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/Makefile.postamble (after-install): Removed old 
	code for creating /etc/services.add when packaging.
	